# slibc

./: .cirrus.yml  Cargo.toml  README.md  build.rs  tarpaulin.toml
.github/workflows/: ci.yml
src/: as_path.rs  borrowed_fd.rs  cstring_vec.rs  dirent.rs  epoll.rs  err.rs  errno.rs  eventfd.rs  fcntl.rs  fdesc.rs  grp.rs  inotify.rs  ioctl.rs  ioprio.rs  kqueue.rs  lib.rs  limits.rs  misc.rs  mman.rs  pidfd.rs  poll.rs  pty.rs  pwd.rs  reboot.rs  regex.rs  resource.rs  sched.rs  select.rs  signal.rs  signalfd.rs  spawn.rs  stat.rs  statfs.rs  statx.rs  stdio.rs  stdlib.rs  string.rs  swap.rs  sys.rs  sysctl.rs  (+8 more)
src/ffi/: alloc_impl.rs  core_impl.rs  mod.rs
src/socket/: addr.rs  inaddr.rs  mod.rs  sockaddr.rs
src/strerror/: android.rs  dragonfly.rs  freebsd.rs  linux_glibc.rs  linux_musl.rs  macos.rs  mod.rs  netbsd.rs  openbsd.rs
tests/: test_cwd.rs  test_files.rs  test_grp.rs  test_priority.rs  test_pwd.rs  test_pwd_grp.rs  test_signal.rs  test_socket.rs  test_sync.rs  test_tty.rs  test_utsname.rs
tools/: parse_errno_table.py
