[package]
name = "slibc"
version = "0.1.0"
edition = "2018"

description = "Safe, friendly interfaces to some commonly used Unix libc functions."
authors = ["cptpcrd"]
license = "MIT"
categories = ["api-bindings", "os::unix-apis"]
repository = "https://github.com/cptpcrd/slibc"

[features]
default = ["std"]

std = ["alloc"]
alloc = []

[dependencies]
libc = { version = "0.2", features = ["extra_traits"], default-features = false }
bitflags = "1.3"
cfg-if = "1.0"
memoffset = "0.6"

nix = { version = "0.23", optional = true }

[dev-dependencies]
tempfile = "3.2"

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-apple-darwin",
    "x86_64-unknown-freebsd",
    "x86_64-unknown-netbsd",
]
all-features = true
rustc-args = ["--cfg", "docsrs"]
